--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,6 +26,10 @@ FetchContent_MakeAvailable(googletest)
 file(GLOB_RECURSE GAME_ENGINE_SOURCES "src/*.cpp")
 file(GLOB_RECURSE GAME_ENGINE_HEADERS "include/*.h")
 
+foreach(header ${GAME_ENGINE_HEADERS})
+    message(STATUS "Found header: ${header}")
+endforeach()
+
 add_library(game_engine STATIC ${GAME_ENGINE_SOURCES} ${GAME_ENGINE_HEADERS})
 
 target_include_directories(game_engine
