feat: refactors shape rendering and adds hexagon and circles
The shape classes circle, triangle, rectangle and hexagon now uses a base
shape class which does all rendering. The inheritor of the base class
only specifies the vertices and indices for its specific shape.

Additionally, the CoreGraphicsContext is now a shared pointer and all
classes which depend on the CoreGraphicsContext for its destruction
now contain a shared pointer to this data.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -75,6 +75,28 @@ set_target_properties(0_collision_detection
     RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin"
 )
 
+
+file(GLOB_RECURSE DEV_SOURCES "examples/2_shape_rendering/*.cpp")
+
+add_executable(2_shape_rendering ${DEV_SOURCES})
+
+target_include_directories(2_shape_rendering
+    PRIVATE
+        ${CMAKE_CURRENT_SOURCE_DIR}/include
+        ${CMAKE_CURRENT_SOURCE_DIR}/src
+)
+
+target_link_libraries(2_shape_rendering
+    PRIVATE
+        game_engine
+)
+
+# Output directory for binaries
+set_target_properties(2_shape_rendering
+    PROPERTIES
+    RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin"
+)
+
 # Tests configuration
 enable_testing()
 file(GLOB_RECURSE TEST_SOURCES "tests/*.cpp")
