--- a/prototypes/game_snake/CMakeLists.txt
+++ b/prototypes/game_snake/CMakeLists.txt
@@ -1,13 +1,31 @@
 cmake_minimum_required(VERSION 3.28)
 
+set(GAME_ENGINE_SDK_VERSION "0.0.1")
+
 set(PROTOTYPE_NAME "game_snake")
 project(${PROTOTYPE_NAME})
 
-set(GAME_ENGINE_SDK_SOURCE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/../..")
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
+set(GAME_ENGINE_SDK_SOURCE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/../..")
+set(GAME_ENGINE_SDK_BIN_DIR "${GAME_ENGINE_SDK_SOURCE_DIR}/releases/v${GAME_ENGINE_SDK_VERSION}")
 
-# Build the game engine sdk
-add_subdirectory(${GAME_ENGINE_SDK_SOURCE_DIR} game_engine_sdk)
+####### VULKAN - Remove once bundled with the SDK
+include(${GAME_ENGINE_SDK_SOURCE_DIR}/cmake/vulkan.cmake)
+#######
+
+####### GLFW - Remove once bundles with the SDK
+include(${GAME_ENGINE_SDK_SOURCE_DIR}/cmake/glfw.cmake)
+#######
+
+
+add_library(GameEngineSDK::Engine STATIC IMPORTED)
+set_target_properties(GameEngineSDK::Engine PROPERTIES
+    IMPORTED_LOCATION ${GAME_ENGINE_SDK_BIN_DIR}/libgame_engine_sdk.a
+)
+target_include_directories(GameEngineSDK::Engine INTERFACE
+    ${GAME_ENGINE_SDK_BIN_DIR}/include
+)
+
 
 file(GLOB_RECURSE PROTOTYPE_SOURCES "src/*.cpp")
 add_executable(${PROTOTYPE_NAME} ${PROTOTYPE_SOURCES})
@@ -17,11 +35,18 @@ target_compile_features(${PROTOTYPE_NAME} PUBLIC cxx_std_20)
 target_include_directories(${PROTOTYPE_NAME}
     PRIVATE
         ${GAME_ENGINE_SDK_SOURCE_DIR}/include
+        # Remove once bundled with SDK
+        ${VULKAN_SDK_PATH}/include
+        ${glfw_SOURCE_DIR}/include
+
 )
 
 target_link_libraries(${PROTOTYPE_NAME}
     PRIVATE
-    game_engine_sdk
+        GameEngineSDK::Engine 
+        ${VULKAN_LIBRARY}
+        glfw
+
 )
 
 set_target_properties(${PROTOTYPE_NAME}
