feat: created example 3 tile showcase

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -74,6 +74,7 @@ if(GAME_ENGINE_SDK_BUILD_EXAMPLES)
     message(STATUS "Configuring examples...")
     add_subdirectory(examples/1_spatial_subdivision)
     add_subdirectory(examples/2_shape_rendering)
+    add_subdirectory(examples/3_tile_showcase)
     add_subdirectory(examples/4_user_interface)
     message(STATUS "Configuring examples... DONE!")
 endif()
