--- a/sdk/game_engine_sdk/logger/CMakeLists.txt
+++ b/sdk/game_engine_sdk/logger/CMakeLists.txt
@@ -3,15 +3,14 @@ cmake_minimum_required(VERSION 3.28)
 option(GAME_ENGINE_SDK_BUILD_TEST "Build the unit tests" OFF)
 option(CMAKE_LOG_LEVEL_DEBUG "Confgure using debug log level" OFF)
 
-message(STATUS "Building tiling module with the following options:")
+message(STATUS "Building logger module with the following options:")
 message(STATUS "    Log level: ${CMAKE_LOG_LEVEL_DEBUG}")
 message(STATUS "    Build type: ${CMAKE_BUILD_TYPE}")
-message(STATUS "    Build tests: ${GAME_ENGINE_SDK_BUILD_TEST}")
 
-project(tiling CXX)
+project(logger CXX)
 
 add_library(${PROJECT_NAME} INTERFACE)
-add_library(render_engine::tiling ALIAS ${PROJECT_NAME})
+add_library(logger::logger ALIAS ${PROJECT_NAME})
 
 target_compile_features(${PROJECT_NAME} INTERFACE cxx_std_20)
 
@@ -20,11 +19,3 @@ target_include_directories(${PROJECT_NAME}
     ${CMAKE_CURRENT_SOURCE_DIR}/public
 )
 
-target_link_libraries(${PROJECT_NAME}
-    INTERFACE 
-        logger::logger
-)
-
-if(GAME_ENGINE_SDK_BUILD_TEST)
-    add_subdirectory(test)
-endif()
