--- a/sdk/game_engine_sdk/render_engine/CMakeLists.txt
+++ b/sdk/game_engine_sdk/render_engine/CMakeLists.txt
@@ -4,12 +4,22 @@ message(STATUS "Configuring render_engine modules")
 
 project(render_engine)
 
+
+option(RENDER_ENGINE_BUILD_IMAGE "Build the image module" ON)
 option(RENDER_ENGINE_BUILD_TILING "Build the tiling module" ON)
 
-# Add tiling module
+if(RENDER_ENGINE_BUILD_IMAGE)
+    message(STATUS "  - Adding image module")
+    add_subdirectory(image)
+else()
+    message(STATUS "  - Skipping image module")
+endif()
+
 if(RENDER_ENGINE_BUILD_TILING)
     message(STATUS "  - Adding tiling module")
     add_subdirectory(tiling)
 else()
     message(STATUS "  - Skipping tiling module")
 endif()
+
+
