wip: initial render of full map

--- a/sdk/game_engine_sdk/render_engine/CMakeLists.txt
+++ b/sdk/game_engine_sdk/render_engine/CMakeLists.txt
@@ -9,17 +9,17 @@ option(RENDER_ENGINE_BUILD_IMAGE "Build the image module" ON)
 option(RENDER_ENGINE_BUILD_TILING "Build the tiling module" ON)
 
 if(RENDER_ENGINE_BUILD_IMAGE)
-    message(STATUS "  - Adding image module")
+    message(STATUS "Adding image module")
     add_subdirectory(image)
 else()
-    message(STATUS "  - Skipping image module")
+    message(STATUS "Skipping image module")
 endif()
 
 if(RENDER_ENGINE_BUILD_TILING)
-    message(STATUS "  - Adding tiling module")
+    message(STATUS "Adding tiling module")
     add_subdirectory(tiling)
 else()
-    message(STATUS "  - Skipping tiling module")
+    message(STATUS " Skipping tiling module")
 endif()
 
 
