--- a/sdk/game_engine_sdk/render_engine/CMakeLists.txt
+++ b/sdk/game_engine_sdk/render_engine/CMakeLists.txt
@@ -4,9 +4,10 @@ message(STATUS "Configuring render_engine modules")
 
 project(render_engine)
 
-
 option(RENDER_ENGINE_BUILD_IMAGE "Build the image module" ON)
 option(RENDER_ENGINE_BUILD_TILING "Build the tiling module" ON)
+option(RENDER_ENGINE_BUILD_WINDOW "Build the window module" ON)
+option(RENDER_ENGINE_BUILD_VULKAN "Build the vulkan module" ON)
 
 if(RENDER_ENGINE_BUILD_IMAGE)
     message(STATUS "Adding image module")
@@ -22,4 +23,18 @@ else()
     message(STATUS " Skipping tiling module")
 endif()
 
+if(RENDER_ENGINE_BUILD_WINDOW)
+    message(STATUS "Adding window module")
+    add_subdirectory(window)
+else()
+    message(STATUS " Skipping window module")
+endif()
+
+# if(RENDER_ENGINE_BUILD_VULKAN)
+#     message(STATUS "Adding vulkan module")
+#     add_subdirectory(vulkan)
+# else()
+#     message(STATUS " Skipping vulkan module")
+# endif()
+#
 
