--- a/sdk/game_engine_sdk/render_engine/CMakeLists.txt
+++ b/sdk/game_engine_sdk/render_engine/CMakeLists.txt
@@ -5,6 +5,7 @@ message(STATUS "Configuring render_engine modules")
 project(render_engine)
 
 option(RENDER_ENGINE_BUILD_IMAGE "Build the image module" ON)
+option(RENDER_ENGINE_BUILD_CAMERA "Build the camera module" ON)
 option(RENDER_ENGINE_BUILD_TILING "Build the tiling module" ON)
 option(RENDER_ENGINE_BUILD_WINDOW "Build the window module" ON)
 option(RENDER_ENGINE_BUILD_VULKAN "Build the vulkan module" ON)
@@ -14,6 +15,13 @@ if(RENDER_ENGINE_BUILD_IMAGE)
     add_subdirectory(image)
 else()
     message(STATUS "Skipping image module")
+endif()
+
+if(RENDER_ENGINE_BUILD_CAMERA)
+    message(STATUS "Adding camera module")
+    add_subdirectory(camera)
+else()
+    message(STATUS "Skipping camera module")
 endif()
 
 if(RENDER_ENGINE_BUILD_TILING)
